--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>IMDB</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-		<link rel="stylesheet" href="./assets/css/style.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 	<header class="p-4">
@@ -12,7 +12,7 @@
 				<div class="col-6">
 					<div class="logo">
 						<a href="index.html">
-							<img src="./assets/img/logo.svg" alt="logo" title="logo">
+							<img src="logo.svg" alt="logo" title="logo">
 						</a>
 					</div>
 				</div>
@@ -31,7 +31,7 @@
 			</div>
 		</section>
 	</main>
-	<script src="./assets/js/db.js"></script>
-	<script src="./assets/js/app.js"></script>
+	<script src="db.js"></script>
+	<script src="app.js"></script>
 	</body>
 </html>
